--- a/Weather/Weather.xcodeproj/xcshareddata/xcschemes/weather.xcscheme
+++ b/Weather/Weather.xcodeproj/xcshareddata/xcschemes/weather.xcscheme
@@ -51,7 +51,7 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <LocationScenarioReference
-         identifier = "New York, NY, USA"
+         identifier = "Hong Kong, China"
          referenceType = "1">
       </LocationScenarioReference>
    </LaunchAction>
